raw/regex-0.1.80@030-compile_one--2017-01-10-23-31-20--2.log
commit e57f061be20666eb0506f6f41551c798bbb38b60
Merge: e4fee52 04e4a60
Author: bors <bors@rust-lang.org>
Date:   Wed Jan 11 05:27:11 2017 +0000

    Auto merge of #38916 - estebank:pad-suggestion-list, r=nikomatsakis
    
    Teach diagnostics to correct margin of multiline messages
    
    Make the suggestion list have a correct padding:
    
    ```
    error[E0308]: mismatched types
     --> file.rs:3:20
      |
    3 |     let x: usize = "";
      |                    ^^ expected usize, found reference
      |
      = note: expected type `usize`
      = note:    found type `&'static str`
      = help: here are some functions which might fulfill your needs:
              - .len()
              - .foo()
              - .bar()
    ```
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./regex-0.1.80@030-compile_one
git apply 030-compile_one.diff
find . -name "*.rs" | xargs touch
git diff
diff --git a/regex-0.1.80/src/compile.rs b/regex-0.1.80/src/compile.rs
index 9db743f..9a32d30 100644
--- a/regex-0.1.80/src/compile.rs
+++ b/regex-0.1.80/src/compile.rs
@@ -137,6 +137,8 @@ impl Compiler {
     }
 
     fn compile_one(mut self, expr: &Expr) -> result::Result<Program, Error> {
+        {} // @030
+
         // If we're compiling a forward DFA and we aren't anchored, then
         // add a `.*?` before the first capture group.
         // Other matching engines handle this by baking the logic into the
RUSTFLAGS="-Z incremental=incr" cargo rustc  -- \
  -Ztime-passes -Zinput-stats -Z incremental-info
makefile:18: recipe for target 'all@030-compile_one' failed
done
